# wingman

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/planning/: 00-project-setup.md  01-vision-and-goals.md  02-user-personas.md  03-product-requirements.md  04-feature-breakdown.md  05-ui-ux-design.md  06-component-specs.md  07-technical-architecture.md  08-data-models.md  09-api-contracts.md  10-error-handling.md  11-security-considerations.md  12-testing-strategy.md  13-accessibility.md  14-performance-goals.md  15-file-architecture.md  16-design-tokens.md  17-code-patterns.md  18-decision-log.md  AGENT-GUIDE.md  DEPENDENCIES.md
docs/reference/: conventions.md  glossary.md  tech-decisions.md  troubleshooting.md
docs/roadmap/: progress-tracker.md  sprint-overview.md
landing/: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/claude/: mod.rs  parser.rs  process.rs
src-tauri/src/commands/: activity.rs  mod.rs  project.rs  session.rs  system.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/state/: app_state.rs  file_watcher.rs  mod.rs
src/constants/: defaults.ts  index.ts  keyboard-shortcuts.ts
src/hooks/: index.ts  useActivityFeed.ts  (+4 more)
(+126 files in other folders)
