[package]
name = "wingman"
version = "0.1.0"
description = "A Claude Code GUI - chat interface with live preview"
authors = ["you"]
edition = "2021"

[lib]
name = "wingman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

# Path handling
dirs = "5"

# Open URLs/files
open = "5"

# Find executables in PATH
which = "6"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
